--- a/secondApp/app/views/tempwhat.scala.html
+++ b/secondApp/app/views/tempwhat.scala.html
@@ -9,7 +9,7 @@
 <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap-theme.min.css"))'>
 <script src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))' type='text/javascript' ></script>
 <script src='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))' type='text/javascript' ></script>
-
+<script src="@routes.Assets.at("javascripts/highlightText.js")"></script>
 <link rel='stylesheet' href='@routes.Assets.at("stylesheets/bootstrap.min.css")'>
 <link rel='stylesheet' href='@routes.Assets.at("stylesheets/doReview.css")'>
 <style>
@@ -21,9 +21,6 @@
 
 
 <h1> @functionName Code snippets</h1><br><br><br>
-
-
-
 
  @if(result != null) {
 <div class="accordion" id="accordion">
@@ -62,10 +59,19 @@
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <h4 class="modal-title" id="myModalLabel">@key.snippet</h4>
       </div>
+      <div id="inputText@i">
+      
       <div class="modal-body" style = " font-family: Courier New, Courier, monospace; font-size: 17px;">
       
         @Html(HtmlFormat.escape(key.sourceCode).toString.replace("\n", "<br />"))
       </div>
+      
+      </div>
+      <script type="text/javascript">
+      
+      highlight('Axis',@i);
+      </script>
+      
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         
